--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,5 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
